Windows now have correct z-index

--- a/ui/css/workbench.css
+++ b/ui/css/workbench.css
@@ -26,7 +26,7 @@ body {
 }
 
 .window {
-    position: relative;
+    position: absolute;
     background: #aaaaaa;
     height: 20em;
     width: 20em;
